--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,8 +27,34 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
     //New AndroidX design dependency
     implementation 'com.google.android.material:material:1.0.0-beta01'
+
+    //Url Image View
+    implementation 'com.github.bumptech.glide:glide:4.3.1'
+
+    //Click recycler item
+    implementation 'com.chootdev:recycleclick:1.0.0'
+
+    //Retrofit Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
+
+    //Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+
+    //Fancy Toast
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
+
+    //Room Data
+    implementation 'android.arch.persistence.room:runtime:1.1.1';
+    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1';
+
+
 
 }
