--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-beta01'
 
     //Url Image View
-    implementation 'com.github.bumptech.glide:glide:4.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
     //Click recycler item
     implementation 'com.chootdev:recycleclick:1.0.0'
@@ -58,5 +59,8 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1';
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1';
 
-
+    //Google map service
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 }
