--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".fragment.admin_fragment.AdminProfileFragment"></activity>
+        <activity android:name=".activity.ProductActivity"></activity>
+        <activity android:name=".fragment.admin_fragment.AdminProfileFragment" />
         <activity android:name=".fragment.admin_fragment.AdminComplainFragment" />
         <activity android:name=".fragment.admin_fragment.AdminOrderFragment" />
         <activity android:name=".activity.MartDashboardActivity" />
