Marts added on map

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +18,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".activity.CartActivity"/>
-        <activity android:name=".activity.ProductViewActivity" />
+
         <activity android:name=".activity.ProductActivity" />
         <activity android:name=".fragment.admin_fragment.AdminProfileFragment" />
         <activity android:name=".fragment.admin_fragment.AdminComplainFragment" />
