bug fix in Admin Order Adapter

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity android:name=".fragment.admin_fragment.AdminComplainFragment" />
         <activity android:name=".fragment.admin_fragment.AdminOrderFragment" />
         <activity android:name=".activity.MartDashboardActivity" />
-        <activity android:name=".activity.AdminDashboardActivity" />
+        <activity android:name=".activity.AdminDashboardActivity" >
+
+        </activity>
         <activity android:name=".activity.CustomerDashboardActivity" />
         <activity
             android:name=".activity.SignupActivity"
