create review fragment

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,16 +17,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.CartActivity"/>
-
+        <activity android:name=".fragment.admin_fragment.AdminReviewsFragment"></activity>
+        <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.ProductActivity" />
         <activity android:name=".fragment.admin_fragment.AdminProfileFragment" />
         <activity android:name=".fragment.admin_fragment.AdminComplainFragment" />
         <activity android:name=".fragment.admin_fragment.AdminOrderFragment" />
         <activity android:name=".activity.MartDashboardActivity" />
-        <activity android:name=".activity.AdminDashboardActivity" >
-
-        </activity>
+        <activity android:name=".activity.AdminDashboardActivity"></activity>
         <activity android:name=".activity.CustomerDashboardActivity" />
         <activity
             android:name=".activity.SignupActivity"
