--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,21 +17,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".fragment.admin_fragment.AdminReviewsFragment"></activity>
         <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.ProductActivity" />
-        <activity android:name=".fragment.admin_fragment.AdminProfileFragment" />
-        <activity android:name=".fragment.admin_fragment.AdminComplainFragment" />
-        <activity android:name=".fragment.admin_fragment.AdminOrderFragment" />
         <activity android:name=".activity.MartDashboardActivity" />
-        <activity android:name=".activity.AdminDashboardActivity"></activity>
+        <activity android:name=".activity.AdminDashboardActivity" android:screenOrientation="fullSensor" />
         <activity android:name=".activity.CustomerDashboardActivity" />
         <activity
             android:name=".activity.SignupActivity"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="fullSensor" />
         <activity
             android:name=".activity.LoginActivity"
-            android:screenOrientation="portrait">
+            android:screenOrientation="fullSensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
