--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/provider_path"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/provider_path"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.CheckoutActivity"></activity>
+        <activity android:name=".activity.CheckoutActivity" />
         <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.ProductActivity" />
         <activity android:name=".activity.MartDashboardActivity" />
