--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activity.PromotionActivity"></activity>
+        <activity android:name=".activity.OrderHistoryActivity"></activity>
+        <activity android:name=".activity.PromotionActivity" />
         <activity android:name=".activity.CheckoutActivity" />
         <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.ProductActivity" />
@@ -39,12 +40,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/api_key" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
 </manifest>
